--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,11 @@
-name: 'Installs Atlas CLI tool'
+name: 'Installs Atlas'
 description: 'Installs a specific version of Atlas'
 branding:
   icon: database
 author: 'Ariga'
 inputs:
   version:
-    description: 'Which version of Atlas CLI to install, in the format of "v0.14.1"'
+    description: 'Which version of Atlas to install, in the format of "v0.14.1"'
     required: false
     default: 'latest'
 runs:
