action/branding: added color
This is recommended when publishing the action to the marketplace

--- a/action.yml
+++ b/action.yml
@@ -2,6 +2,7 @@ name: 'Installs Atlas'
 description: 'Installs a specific version of Atlas'
 branding:
   icon: database
+  color: 'blue'
 author: 'Ariga'
 inputs:
   version:
