--- a/action.yml
+++ b/action.yml
@@ -9,9 +9,15 @@ inputs:
     description: 'Which version of Atlas to install, in the format of "v0.14.1"'
     required: false
     default: 'latest'
+  cloud-token:
+    description: API token to authenticate to an Atlas Cloud organization
+    required: false
 runs:
   using: "composite"
   steps:
     - run: curl -sSf https://atlasgo.sh | ATLAS_VERSION=${{inputs.version}} CI=true sh
       shell: bash
-    
+    - name: Login to Atlas
+      if: inputs.cloud-token != null
+      shell: bash
+      run: atlas login --token ${{ inputs.cloud-token }}
