--- a/action.yml
+++ b/action.yml
@@ -21,8 +21,13 @@ runs:
     - if: runner.os == 'Windows'
       shell: pwsh
       run: |
-        New-Item -Path "C:\Users\$env:USERNAME\bin" -ItemType Directory -Force
-        curl -L https://release.ariga.io/atlas/atlas-windows-amd64-latest.exe -o "C:\Users\$env:USERNAME\AppData\Local\Microsoft\WindowsApps\atlas.exe"
+        $version = "${{ inputs.version }}"
+        $fileName = if ($version -eq "latest") { "atlas-windows-amd64-latest.exe" } else { "atlas-windows-amd64-$version.exe" }
+        $url = "https://release.ariga.io/atlas/$fileName"
+        $targetPath = "$env:LocalAppData\Programs\Atlas"
+        New-Item -Path $targetPath -ItemType Directory -Force
+        curl -L $url -o "$targetPath\atlas.exe"
+        Add-Content $env:GITHUB_PATH "$targetPath"
     - name: Login to Atlas
       if: inputs.cloud-token != null
       shell: bash
