--- a/action.yml
+++ b/action.yml
@@ -21,9 +21,7 @@ runs:
     - if: runner.os == 'Windows'
       shell: pwsh
       run: |
-        $version = "${{ inputs.version }}"
-        $fileName = if ($version -eq "latest") { "atlas-windows-amd64-latest.exe" } else { "atlas-windows-amd64-$version.exe" }
-        $url = "https://release.ariga.io/atlas/$fileName"
+        $url = "https://release.ariga.io/atlas/atlas-windows-amd64-${{ inputs.version }}.exe"
         $targetPath = "$env:LocalAppData\Programs\Atlas"
         New-Item -Path $targetPath -ItemType Directory -Force
         curl -L $url -o "$targetPath\atlas.exe"
