--- a/action.yml
+++ b/action.yml
@@ -15,8 +15,17 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: curl -sSf https://atlasgo.sh | ATLAS_VERSION=${{inputs.version}} CI=true sh
+    - if: runner.os != 'Windows'
       shell: bash
+      run: curl -sSf https://atlasgo.sh | ATLAS_VERSION=${{inputs.version}} CI=true sh
+    - if: runner.os == 'Windows'
+      shell: pwsh
+      run: |
+        $url = "https://release.ariga.io/atlas/atlas-windows-amd64-${{ inputs.version }}.exe"
+        $targetPath = "$env:LocalAppData\Programs\Atlas"
+        New-Item -Path $targetPath -ItemType Directory -Force
+        curl -L $url -o "$targetPath\atlas.exe"
+        Add-Content $env:GITHUB_PATH "$targetPath"
     - name: Login to Atlas
       if: inputs.cloud-token != null
       shell: bash
